# sceneagent

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
Camera_array_tool/: __init__.py  blender_manifest.toml
Camera_array_tool/assets/: predefined_objects.blend
api/: Dockerfile  README.md  pyproject.toml
api/src/sceneagent/: __init__.py  categorizer.py  clip_util.py  db.py  geometry.py  main.py  matcher.py  mcp_server.py  render_proxy.py  vlm.py
api/src/sceneagent/agent/: graph.py  tools.py
api/src/sceneagent/routes/: chat.py  detections.py  hotspots.py  metrics.py  notes.py  scenes.py
data/scene/demo/: demo_notes.json
db/init/: 001_schema.sql
docs/superpowers/plans/: 2026-04-20-p1-segmentation-aware-demo.md  2026-04-20-sceneagent-plan.md
docs/superpowers/specs/: 2026-04-20-sceneagent-design.md  (+1 more)
k8s/: 00-namespace.yaml  10-postgres.yaml  20-redis.yaml  30-api.yaml  40-web.yaml  99-secrets.example.yaml  README.md  apply.sh
pipeline/: gen_camera_poses.py  pyproject.toml  setup_wsl.sh
pipeline/output/: metrics.json  object_inventory.json
pipeline/render_views/: camera_poses.json  index.html  package-lock.json  package.json  render.mjs
pipeline/src/: backproject.py  decode_splat.py  evaluate.py  npz_to_ply.py  ply_to_pointcloud.py  render_gsplat.py  render_py.py  seed_db.py  segment.py  segment_sam3.py  vocab_gt.py  vocab_interior.py
pipeline/tests/: test_evaluate_matching.py  test_npz_to_ply.py
scripts/: README.md  download_scene.sh
web/: Dockerfile  README.md  package-lock.json  package.json
(+13 files in other folders)
