[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sceneagent"
version = "0.1.0"
description = "SceneAgent API — FastAPI backend, Postgres+pgvector, MCP server, LangGraph agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "asyncpg>=0.29",
  "pgvector>=0.2.5",
  "google-generativeai>=0.5",
  "langgraph>=0.0.40",
  "mcp>=1.0.0",
  "numpy>=1.26",
  "open-clip-torch>=2.24",
  "torch>=2.2",
  "pillow>=10.2",
  "httpx>=0.27",
  "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
